--- a/client/index.html
+++ b/client/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CapeControl</title>
+    <meta name="description" content="Empower your business with AI agents — fast, affordable, and simple." />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CapeControl</title>
-  <meta name="description" content="Empower your business with AI agents — fast, affordable, and simple." />
-  
-  <!-- Performance optimizations -->
-  <link rel="preconnect" href="https://lightning-s3.s3.amazonaws.com" />
-  <link rel="dns-prefetch" href="https://lightning-s3.s3.amazonaws.com" />
-  
-  <!-- Local PWA Icons -->
-  <link rel="icon" href="/static/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-  
-  <meta name="theme-color" content="#1d4ed8" />
-  
-  <!-- SEO improvements -->
-  <meta name="robots" content="index, follow" />
-  <meta name="author" content="CapeControl" />
-  <meta name="keywords" content="AI agents, business automation, productivity tools, no-code AI" />
-  <link rel="canonical" href="https://www.cape-control.com/" />
-</head>
+    <!-- Performance optimization -->
+    <link rel="preconnect" href="https://lightning-s3.s3.amazonaws.com" />
+    <link rel="dns-prefetch" href="https://lightning-s3.s3.amazonaws.com" />
 
-<body>
-  <div id="root"></div>
-  <!-- Vite will inject the actual script during build -->
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+    <!-- Remote PWA Icons from S3 -->
+    <link rel="icon" type="image/png" sizes="192x192" href="https://lightning-s3.s3.amazonaws.com/static/website/img/logo-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://lightning-s3.s3.amazonaws.com/static/website/img/logo-512x512.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://lightning-s3.s3.amazonaws.com/static/website/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://lightning-s3.s3.amazonaws.com/static/website/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://lightning-s3.s3.amazonaws.com/static/website/img/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
 
+    <meta name="theme-color" content="#1d4ed8" />
+
+    <!-- SEO improvements -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="CapeControl" />
+    <meta name="keywords" content="AI agents, business automation, productivity tools, no-code AI" />
+    <link rel="canonical" href="https://www.cape-control.com/" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- Vite will inject the actual script during build -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
